--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,23 @@
 logging.level.org.springframework=ERROR
-
-spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.maxActive=10
-spring.datasource.maxIdle=5
-spring.datasource.minIdle=2
-spring.datasource.initialSize=5
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5400/ecommerce
+spring.datasource.username=postgres
+spring.datasource.password=admin
 spring.datasource.removeAbandoned=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-
+spring.jpa.properties.hibernate.format_sql=true
 jwt.secret=EcommerceSecretToken
 jwt.expiration=6000000
-
-
 default.sender=caccafelice@gmail.com
 spring.mail.host=smtp.gmail.com
 spring.mail.username=caccafelice@gmail.com
 spring.mail.password=r4ff4ele80
-spring.mail.properties.mail.smtp.auth = true
-spring.mail.properties.mail.smtp.socketFactory.port = 465
-spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
-spring.mail.properties.mail.smtp.socketFactory.fallback = false
-spring.mail.properties.mail.smtp.starttls.enable = true
-spring.mail.properties.mail.smtp.ssl.enable = true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback=false
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=true
